double scrollbar issue due to overflow

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,6 @@ body{
     color: var(--text-color);
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
 }
 
 .header {
